update fix overflow wrap text

--- a/src/components/DateTimePicker/DateTimePicker.module.scss
+++ b/src/components/DateTimePicker/DateTimePicker.module.scss
@@ -6,7 +6,7 @@
     height: 25px;
     position: relative;
     border-radius: 6px;
-    border: 2px solid rgb(188, 188, 188);
+    // border: 2px solid rgb(188, 188, 188);
     box-shadow: -1.8px -1.2px 6px rgba(0, 166, 202, 0.25),
       1.2px 1.8px 6px rgba(0, 166, 202, 0.25);
     display: flex;
