--- a/src/components/DescriptionPopUp/DesPopUp.module.scss
+++ b/src/components/DescriptionPopUp/DesPopUp.module.scss
@@ -184,7 +184,7 @@
         padding: 8px 0px;
         gap: 6px;
 
-        width: 310px;
+        width: 100%;
         height: 30.4px;
 
         background: #ffffff;
